--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Maxim Bootstrap Templat - Index</title>
+  <title>KPGD</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -51,9 +51,9 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
+          <li><a class="nav-link scrollto" href="#services">Products</a></li>
+          <li><a class="nav-link scrollto " href="#portfolio">Features</a></li>
+          <li><a class="nav-link scrollto" href="#team">Enquire Now</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -82,8 +82,9 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="container text-center text-md-left" data-aos="fade-up">
-      <h1>Welcome to Maxim</h1>
-      <h2>We are team of talented designers making websites with Bootstrap</h2>
+     <div class="container text-center text-md-left" data-aos="fade-up">
+      <h1>KPGD SOLUTIONS</h1>
+      <h2>UPVC WINDOWS</h2>
       <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
@@ -686,19 +687,20 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>Site No.108/1, Nerige Main Road, Sarjapura Hobli, Katriguppe Village, Anekal Taluk, Bangalore, Karnataka</p>
               </div>
 
               <div class="email mt-4">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>kpgdsolutions2022@gmail.com</p>
               </div>
 
               <div class="phone mt-4">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+91 9830310022</p>
+                <p>+91 7989388609</p>
               </div>
 
             </div>
